--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,30 @@
 
 /* 全局字体与颜色 */
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-               Helvetica, Arial, sans-serif;
+  font-family:
+    "Source Han Serif SC",
+    "Noto Serif CJK SC",
+    "Source Han Serif",
+    "Times New Roman",
+    serif;
+
   color: #222;
   background-color: #ffffff;
 }
+
+/* 无衬线元素使用思源黑体 */
+.site-header,
+.site-title,
+.site-nav,
+nav,
+button {
+  font-family:
+    "Source Han Sans SC",
+    "Noto Sans CJK SC",
+    "Source Han Sans",
+    sans-serif;
+}
+
 
 /* 标题 */
 h1, h2, h3, h4 {
