--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,3 +61,14 @@ a:hover {
 .wrapper {
   max-width: 720px;
 }
+
+/* TOC 样式 */
+nav ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+nav ul li {
+  margin: 4px 0;
+}
+
