--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,8 @@ a:hover {
 
 .site-title {
   color: #111 !important;
-  font-weight: 600;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 /* ---------------------------
