--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,7 +68,7 @@ a:hover {
   color: #111 !important;
   font-weight: 700;
   /* 1. 调大字号：从 30px 改为 36px 或更大 */
-  font-size: 36px; 
+  font-size: 36px !important; 
 }
 
 /* 2. 让导航链接（笔记、杂项等）加粗 */
