Adjust font size and margin for navigation links

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,8 +74,8 @@ a:hover {
 /* 2. 让导航链接（笔记、杂项等）加粗 */
 .site-nav .page-link {
   font-weight: 600;  /* 或者使用 bold */
-  font-size: 12px !important;   /* 如果觉得按钮字太小，也可以顺便调大一点 */
-  margin-left: 10px; /* 增加按钮之间的间距 */
+  font-size: 16px !important;   /* 如果觉得按钮字太小，也可以顺便调大一点 */
+  margin-left: 8px !important; /* 增加按钮之间的间距 */
 }
 
 /* ---------------------------
